change 'Github' to 'GitHub'

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <p>
 				<a href="http://getbootstrap.com/">Bootstrap</a>&nbsp;
                 <a href="https://commons.wikimedia.org/wiki/File:ShenZhen_at_night.jpg">Xublake</a>&nbsp;
-                <a href="https://github.com/">Github</a>&nbsp;
+                <a href="https://github.com/">GitHub</a>&nbsp;
 				</p>
 				<a href="http://about.me/ratazzi">@ratazzi</a>&nbsp;
                 <a href="https://plus.google.com/u/0/+LionLam/about">@LionLam</a>&nbsp;
