增加深绿公众号链接 FOR IOS

--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
                     <li>
 					    <a href="https://telegram.me/joinchat/CnFrYz1luTHOAqccQnEp0g" class="btn btn-default btn-lg"><i class="fa fa-comments fa-fw"></i> <span class="network-name">TELEGRAM</span></a>
 					</li>
+                    <li>
+                        <a href="http://weixin.qq.com/r/0ipUTDfEQWo_rXMv93-A" class="btn btn-default btn-lg"><i class="fa fa-comments fa-fw"></i> <span class="network-name">WECHAT FOR IOS</span></a>
+                    </li>
                 </ul>
             </div>
         </div>
