--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
                         <a href="http://weixin.qq.com/r/0ipUTDfEQWo_rXMv93-A" class="btn btn-default btn-lg"><i class="fa fa-comments fa-fw"></i> <span class="network-name">WECHAT FOR IOS</span></a>
                     </li>
                 </ul>
+                    <li>
+                        <a href="http://weixin.qq.com/r/0ipUTDfEQWo_rXMv93-A" ><img src="img/qrcode.jpg" height="344" width="344" ></a>
+                    </li>
             </div>
         </div>
     </section>
