删除wechat for ios，增加微信公众号字段

--- a/index.html
+++ b/index.html
@@ -163,13 +163,16 @@
                     <li>
 					    <a href="https://telegram.me/joinchat/CnFrYz1luTHOAqccQnEp0g" class="btn btn-default btn-lg"><i class="fa fa-comments fa-fw"></i> <span class="network-name">TELEGRAM</span></a>
 					</li>
-                    <li>
-                        <a href="http://weixin.qq.com/r/0ipUTDfEQWo_rXMv93-A" class="btn btn-default btn-lg"><i class="fa fa-comments fa-fw"></i> <span class="network-name">WECHAT FOR IOS</span></a>
-                    </li>
                 </ul>
-                    <li>
-                        <a href="http://weixin.qq.com/r/0ipUTDfEQWo_rXMv93-A" ><img src="img/qrcode.jpg" height="344" width="344" ></a>
-                    </li>
+		<ul class="list-inline banner-social-buttons">
+    <li class="btn btn-default btn-lg">
+    <i class="fa fa-comments fa-fw"></i>
+    	<span class="network-name">微信公众号</span>
+   </li>
+</ul>
+                    <div>
+                        <a href="http://weixin.qq.com/r/0ipUTDfEQWo_rXMv93-A" ><img src="img/qrcode.jpg" height="250" width="250" ></a>
+                    </div>
             </div>
         </div>
     </section>
