修复在移动设备上样式乱

--- a/index.html
+++ b/index.html
@@ -165,10 +165,12 @@
 					</li>
                 </ul>
 		<ul class="list-inline banner-social-buttons">
-    <li class="btn btn-default btn-lg">
+			<a class="btn btn-default btn-lg">
+<li>
     <i class="fa fa-comments fa-fw"></i>
     	<span class="network-name">微信公众号</span>
    </li>
+    </a>
 </ul>
                     <div>
                         <a href="http://weixin.qq.com/r/0ipUTDfEQWo_rXMv93-A" ><img src="img/qrcode.jpg" height="250" width="250" ></a>
