--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>SZENL 2015-2018 &copy; Creative Commons.</p>
+            <p>SZENL 2015-<script type="text/javascript">myDate = new Date();myYear = myDate.getFullYear();document.write(myYear);</script> &copy; Creative Commons.</p>
         </div>
     </footer>
 
