更新群邀请链接
更新群邀请链接

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <a href="https://telegram.me/szenlguide" class="btn btn-default btn-lg"><i class="fa fa-book fa-fw"></i> <span class="network-name">WIKI</span></a>
                     </li>
                     <li>
-					    <a href="https://telegram.me/joinchat/CnFrYz1luTHOAqccQnEp0g" class="btn btn-default btn-lg"><i class="fa fa-comments fa-fw"></i> <span class="network-name">TELEGRAM</span></a>
+					    <a href="https://t.me/joinchat/CypFiD1luTEFFmbq2sy2Lg" class="btn btn-default btn-lg"><i class="fa fa-comments fa-fw"></i> <span class="network-name">TELEGRAM</span></a>
 					</li>
                 </ul>
 		<ul class="list-inline banner-social-buttons">
